--- a/zeyuli/docs/接口文档.md
+++ b/zeyuli/docs/接口文档.md
@@ -1,1 +1,82 @@
-#
+# 接口文档
+
+## 用户相关接口
+
+### 1.登录
+
+**请求方式：** POST
+
+**请求地址：** `user/login`
+
+**请求体参数：**
+
+```json
+
+{
+  "userName": "admin",
+  "password": "sha256后的密码"
+}
+```
+
+**返回值：**
+
+- 成功：
+
+```json
+{
+  "data": {
+    "token": "token"
+  },
+  "message": "成功",
+  "statusCode": 200
+}
+```
+
+- 失败：
+
+```json
+{
+  "data": null,
+  "message": "登录失败",
+  "statusCode": 420
+}
+```
+
+### 2.注册
+
+**请求方式：** POST
+
+**请求地址：** `user/register`
+
+**请求体参数：**
+
+```json
+{
+  "userName": "admin",
+  "password": "sha256后的密码"
+}
+```
+
+**返回值：**
+
+- 成功：
+
+```json
+{
+  "data": null,
+  "message": "注册成功",
+  "statusCode": 200
+}
+```
+
+- 失败：
+
+```json
+{
+  "data": null,
+  "message": "注册失败",
+  "statusCode": 421
+}
+```
+
+### 3.获取用户信息
