docs: 行程安排接口

--- a/zeyuli/docs/接口文档.md
+++ b/zeyuli/docs/接口文档.md
@@ -79,3 +79,34 @@
 }
 ```
 
+## 行程安排接口
+
+### 1. 获取所有行程
+
+**请求方式：** GET
+
+**请求地址：** `deekseek/planItinerary`
+
+**请求参数：**
+
+- token：登录成功后返回的token
+- startCity ：出发城市
+- endCity ：目的城市
+- startDate ：出发日期
+- endDate ：返回日期
+
+**返回值：**
+
+- 成功：
+
+流式的markdown字符
+
+- 失败：
+
+```json
+{
+  "data": null,
+  "message": "获取行程失败",
+  "statusCode": 422
+}
+```
