src:支持最高10轮对话

--- a/zeyuli/docs/接口文档.md
+++ b/zeyuli/docs/接口文档.md
@@ -83,30 +83,43 @@
 
 ### 1. 获取所有行程
 
-**请求方式：** GET
+**接口地址**: /deekseek/planItinerary
 
-**请求地址：** `deekseek/planItinerary`
+**请求方式**: GET
 
-**请求参数：**
+**Produces**: text/html;charset=UTF-8
 
-- token：登录成功后返回的token
-- startCity ：出发城市
-- endCity ：目的城市
-- startDate ：出发日期
-- endDate ：返回日期
+**请求参数:**
 
-**返回值：**
+| 参数名	      | 类型         | 	必填   | 	默认值                  | 	说明                   |
+|-----------|------------|-------|-----------------------|-----------------------|
+| startCity | 	String    | 	是    | 	-	                   | 出发城市                  |       
+| endCity	  | String	    | 是     | 	-	                   | 目的地城市                 |  
+| startDate | 	LocalDate | 	是	   | -	                    | 出发日期 (格式: yyyy-MM-dd) |
+| endDate	  | LocalDate	 | 是	-	  | 返回日期 (格式: yyyy-MM-dd) |
+| token	    | String	是	  | -	    | 用户认证令牌                |
+| userInput | 	String	   | 否	""	 | 用户修改要求（为空时生成新计划）      |
 
-- 成功：
+使用场景:
 
-流式的markdown字符
+首次生成计划: 不传 userInput 或传空字符串
 
-- 失败：
+修改计划: 传入具体的修改要求
 
-```json
-{
-  "data": null,
-  "message": "获取行程失败",
-  "statusCode": 422
-}
+修改计划: 传入具体的修改要求
+
+**示例请求:**
+
+```http
+GET /deekseek/planItinerary?startCity=北京&endCity=上海&startDate=2025-10-25&endDate=2025-10-30&token=xxx&userInput=请增加美食推荐
 ```
+
+**响应格式:**
+
+**成功:** 
+
+`Flux<String> (流式响应，HTML格式)`
+
+**失败:** 
+
+`"身份验证失败，无法获取行程"`
