docs: 前端需要支持markdown浏览

--- a/zeyuli/docs/接口文档.md
+++ b/zeyuli/docs/接口文档.md
@@ -118,7 +118,7 @@ GET /deekseek/planItinerary?startCity=北京&endCity=上海&startDate=2025-10-25
 
 **成功:** 
 
-`Flux<String> (流式响应，HTML格式)`
+`Flux<String> (流式响应，HTML格式，需要用markdown渲染)`
 
 **失败:** 
 
