优化用户登录，新增地图服务的TODO

--- a/zeyuli/docs/接口文档.md
+++ b/zeyuli/docs/接口文档.md
@@ -118,8 +118,14 @@ GET /deekseek/planItinerary?startCity=北京&endCity=上海&startDate=2025-10-25
 
 **成功:** 
 
-`Flux<String> (流式响应，HTML格式，需要用markdown渲染)`
+`Flux<String> (流式响应，需要用markdown渲染)`
 
 **失败:** 
 
 `"身份验证失败，无法获取行程"`
+
+**注意:**
+- `userInput`可能为空
+
+
+https://developer.aliyun.com/article/1617472
